--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nova Plataforma de Abertura de Chamados</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #0056b3;
+        }
+        a {
+            color: #0056b3;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .video-container {
+            margin-top: 20px;
+        }
+        iframe {
+            width: 100%;
+            height: 315px;
+            border: none;
+            border-radius: 8px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Bem-vindo à Nova Plataforma de Abertura de Chamados</h1>
+        <p>Estamos sempre buscando formas de melhorar o nosso atendimento. Por isso, agora contamos com uma nova plataforma moderna e eficiente para a abertura de chamados.</p>
+        <p>Para acessar o sistema, clique no link abaixo:</p>
+        <p><a href="https://skylan.suport.cloud/" target="_blank">Acessar o Novo Sistema de Chamados</a></p>
+        <h2>Guias Rápidos em Vídeo</h2>
+        <p>Confira os vídeos abaixo para aprender como abrir chamados pela nova plataforma:</p>
+        <div class="video-container">
+            <h3>Como abrir um chamado pelo cliente</h3>
+            <iframe src="https://www.youtube.com/embed/QG2rVtVSNx0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <h3>Como abrir um chamado pelo portal</h3>
+            <iframe src="https://www.youtube.com/embed/yrfFrSx70is" allowfullscreen></iframe>
+        </div>
+        <p>Se tiver dúvidas ou precisar de suporte, entre em contato conosco. Estamos aqui para ajudar!</p>
+    </div>
+</body>
+</html>
 
